# BazyDanych

./: CMakeLists.txt  addBook.hpp  addGenre.hpp  addUser.hpp  admin.hpp  danelista5  danelista5.md  deleteBook.hpp  deleteUser.hpp  login.hpp  main.cpp  makefile  ownSearch.hpp  rentBooks.hpp  returnBooks.hpp  searchBook.hpp  searchUser.hpp  updateBook.hpp  updateUser.hpp  user.hpp  userSearch.hpp
include/: connector.hpp
src/: bookOperations.cpp  genres.cpp  login.cpp  user.cpp  userOperations.cpp
